[gd_scene load_steps=10 format=3 uid="uid://nnnnq2juslgh"]

[ext_resource type="Script" path="res://ui/tabs/tab_players/player_button/player_button.gd" id="1_q53a4"]
[ext_resource type="Texture2D" uid="uid://dgq2ci5rqb6w1" path="res://resources/cursors/cursor.png" id="1_yy20s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnkg6"]
bg_color = Color(0.180392, 0.188235, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xtds8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc54l"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.6, 0.6, 0.6, 0.458824)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_375u8"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.6, 0.6, 0.6, 0.458824)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06mwu"]
content_margin_left = 8.0
content_margin_right = 8.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lf13"]
content_margin_left = 8.0
content_margin_right = 8.0

[sub_resource type="ButtonGroup" id="ButtonGroup_fjelw"]
resource_local_to_scene = false
allow_unpress = true

[node name="PlayerButton" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_constants/separation = 0
script = ExtResource("1_q53a4")

[node name="PlayerButton" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pnkg6")

[node name="H" type="HBoxContainer" parent="PlayerButton"]
layout_mode = 2

[node name="IconTexture" type="TextureRect" parent="PlayerButton/H"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_yy20s")
stretch_mode = 3

[node name="V" type="VBoxContainer" parent="PlayerButton/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="UsernameLabel" type="Label" parent="PlayerButton/H/V"]
unique_name_in_owner = true
layout_mode = 2
text = "Default"

[node name="SlugLabel" type="Label" parent="PlayerButton/H/V"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.489622, 0.489622, 0.489622, 1)
text = "Entity Name"

[node name="Button" type="Button" parent="PlayerButton"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xtds8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xc54l")
theme_override_styles/hover = SubResource("StyleBoxFlat_375u8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06mwu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0lf13")
toggle_mode = true
button_group = SubResource("ButtonGroup_fjelw")

[node name="PlayerEntities" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1
